--- a/package.json
+++ b/package.json
@@ -4,7 +4,10 @@
   "description": "Bintus Stores retail clothing app",
   "main": "server.js",
   "scripts": {
-    "start": "node backend/server"
+    "start": "node backend/server",
+    "server": "nodemon backend/server",
+    "client": "npm start --prefix frontend",
+    "dev": "concurrently \"npm run server\" \"npm run client\""
   },
   "repository": {
     "type": "git",
@@ -15,5 +18,12 @@
   "bugs": {
     "url": "https://github.com/bintus-ux/bintus-stores-repo/issues"
   },
-  "homepage": "https://github.com/bintus-ux/bintus-stores-repo#readme"
+  "homepage": "https://github.com/bintus-ux/bintus-stores-repo#readme",
+  "devDependencies": {
+    "concurrently": "^8.2.0",
+    "nodemon": "^3.0.1"
+  },
+  "dependencies": {
+    "express": "^4.18.2"
+  }
 }
