--- a/package.json
+++ b/package.json
@@ -25,7 +25,9 @@
     "nodemon": "^3.0.1"
   },
   "dependencies": {
+    "colors": "^1.4.0",
     "dotenv": "^16.3.1",
-    "express": "^4.18.2"
+    "express": "^4.18.2",
+    "mongoose": "^7.4.2"
   }
 }
