--- a/package.json
+++ b/package.json
@@ -23,8 +23,18 @@
   },
   "homepage": "https://github.com/bintus-ux/bintus-stores-repo#readme",
   "devDependencies": {
+    "assert": "^2.0.0",
+    "buffer": "^6.0.3",
     "concurrently": "^8.2.0",
-    "nodemon": "^3.0.1"
+    "crypto-browserify": "^3.12.0",
+    "https-browserify": "^1.0.0",
+    "nodemon": "^3.0.1",
+    "os-browserify": "^0.3.0",
+    "process": "^0.11.10",
+    "react-app-rewired": "^2.2.1",
+    "stream-browserify": "^3.0.0",
+    "stream-http": "^3.2.0",
+    "url": "^0.11.1"
   },
   "dependencies": {
     "bcryptjs": "^2.4.3",
@@ -33,6 +43,8 @@
     "express": "^4.18.2",
     "express-async-handler": "^1.2.0",
     "jsonwebtoken": "^9.0.1",
-    "mongoose": "^7.4.2"
+    "mongoose": "^7.4.2",
+    "react-scripts": "^5.0.1",
+    "util": "^0.12.5"
   }
 }
