--- a/package.json
+++ b/package.json
@@ -37,6 +37,8 @@
     "url": "^0.11.1"
   },
   "dependencies": {
+    "@stripe/react-stripe-js": "^2.1.2",
+    "@stripe/stripe-js": "^2.1.0",
     "bcryptjs": "^2.4.3",
     "colors": "^1.4.0",
     "dotenv": "^16.3.1",
@@ -45,6 +47,7 @@
     "jsonwebtoken": "^9.0.1",
     "mongoose": "^7.4.2",
     "react-scripts": "^5.0.1",
+    "stripe": "^13.3.0",
     "util": "^0.12.5"
   }
 }
